tests/baselines/reference/sourceMapWithMultipleFilesWithFileEndingWithInterface.errors.txt
a.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
b.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== a.ts (1 errors) ====
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export var X = 1;
    }
    interface Navigator {
        getGamepads(func?: any): any;
        webkitGetGamepads(func?: any): any
        msGetGamepads(func?: any): any;
        webkitGamepads(func?: any): any;
    }
    
==== b.ts (1 errors) ====
    module m1 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class c1 {
        }
    }
    